apps/spoolman/bambu-spoolman/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: bambu-strip-prefix
  namespace: spoolman
spec:
  stripPrefix:
    prefixes:
      - /bambu
