apps/spoolman/bambu-spoolman/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bambu-spoolman
  namespace: spoolman
  labels:
    app: bambu-spoolman
spec:
  selector:
    app: bambu-spoolman
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
