apps/spoolman/bambu-spoolman/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bambu-spoolman
  namespace: spoolman
  annotations:
    external-dns.alpha.kubernetes.io/expose: "true"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: bambu-spoolman
      sectionName: bambu-spoolman
  hostnames:
    - bambu-spoolman.i.recompiled.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2
      backendRefs:
        - name: oauth2-proxy
          namespace: auth
          port: 4180
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExternalAuth
          externalAuth:
            protocol: HTTP
            backendRef:
              name: oauth2-proxy
              namespace: auth
              port: 4180
            http:
              allowedHeaders:
                - Cookie
                - Accept
                - X-Forwarded-For
              allowedResponseHeaders:
                - X-Auth-Request-User
                - X-Auth-Request-Email
      backendRefs:
        - name: bambu-spoolman
          port: 3000
