apps/spoolman/bambu-spoolman/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bambu-spoolman
  namespace: spoolman
  labels:
    app: bambu-spoolman
  annotations:
    external-dns.alpha.kubernetes.io/expose: "true"
    external-dns.alpha.kubernetes.io/target: traefik.i.recompiled.org
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bambu-spoolman.i.recompiled.org`)
      kind: Rule
      services:
        - name: bambu-spoolman
          port: 3000
      middlewares:
        - name: oauth2-proxy
          namespace: auth
  tls:
    secretName: bambu-spoolman-tls
